--- a/css/card.css
+++ b/css/card.css
@@ -4,10 +4,28 @@
   flex-flow: column wrap;
   background-color: var(--neog-white);
   box-shadow: var(--neog-box-shadow);
-  max-width: 20rem;
-  border-radius: var(--neog-border-radius-default);
+  width: 20rem;
+  border-radius: var(--neog-border-radius-small);
   position: relative;
 }
+
+.neog-card__header{
+  padding: 1rem;
+  border-bottom: 1px solid var(--neog-lynx-grey);
+  display: flex;
+  color: var(--neog-grey);
+}
+
+.neog-card__close{
+  margin-left: auto;
+}
+
+.neog-card__header h3 {
+  font-size: var(--neog-fontsize-default);
+  font-weight: var(--neog-text-regular);
+  color: var(--neog-grey);
+}
+
 
 .neog-card__hero-bg {
   display: flex;
@@ -15,47 +33,30 @@
   align-items: center;
   justify-content: center;
   height: 14.5rem;
-  background-color: var(--neog-yellow1);
+  background-color: var(--neog-yellow);
   color: var(--neog-white);
   width: 100%;
 }
 
-.neog-card__hero-bg h1{
-    font-size: 3rem;
+.neog-card__hero-bg h4{
+    font-weight: var(--neog-text-regular);
+    letter-spacing: 0.45rem;
 }
 
-.neog-card__hero-bg h3{
-    font-size: var(--neog-fontsize-normal);
-    font-weight: var(--neog-font-weight-normal);
-    letter-spacing: 0.5rem;
-}
-
-.neog-card__header {
-  padding: 1rem;
-}
-
-.neog-card__header h1 {
-  font-size: 3rem;
-}
-
-.neog-card__header h3{
-    font-size: var(--neog-fontsize-normal)
-}
-
-.neog-card__header h3 {
-  font-size: var(--neog-fontsize-normal);
-  font-weight: var(--neog-font-weight-normal);
-  color: var(--neog-text-muted);
-}
-
-.neog-card__media--fullwidth {
+.neog-card__media-fullwidth {
   width: 100%;
 }
 
-.neog-card__media--fullwidth img {
+.neog-card__media-fullwidth img {
   object-fit: cover;
   width: 100%;
   max-height: 12.5rem;
+}
+
+.neog-card__media-fullwidth.neog-card__background-img{
+  background-image: url(https://picsum.photos/id/0/320/232/);
+  background-repeat: no-repeat;
+  height: 14.5rem;
 }
 
 .neog-card__description {
@@ -66,28 +67,25 @@
 .neog-card__description header{
   display: flex;
   align-items: center;
-}
-
-.neog-card__description-header-icons {
-  font-size: var(--neog-fontsize-normal);
+  font-size: var(--neog-fontsize-default);
 }
 
 .neog-card__description-header-icons > *{
   margin-left: 0.5rem;
 }
 
-.neog-card__description-header-icons i{
-  color: var(--neog-gray3);
+.neog-card__description header i{
+  color: var(--neog-grey);
 }
 
 .neog-card__description p {
-  color: var(--neog-text-muted);
+  color: var(--neog-grey);
   font-size: var(--neog-fontsize-small);
 }
 
 .neog-card__description p span{
-    color: var(--neog-green1);
-    font-weight: var(--neog-font-weight-bold);
+    color: var(--neog-violet);
+    font-weight: var(--neog-text-semibold);
 }
 
 .neog-card__footer {
@@ -106,35 +104,6 @@
   margin-right: 0;
 }
 
-.neog-card__footer button{
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  border: 1px solid var(--neog-gray3);  
-  cursor: pointer;
-}
-
-.neog-card__footer button:hover{
-  background-color: var(--neog-white);
-}
-
-.neog-card__footer button.active{
-  background-color: var(--neog-text-link-hover);
-}
-
-.neog-card__link-button {
-  color: var(--neog-text-link);
-  display: flex;
-  padding: 0.5rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-weight: var(--neog-font-weight-bold);
-  border-radius: var(--neog-border-radius-default);
-}
-
-a.neog-card__link-button:hover {
-  background-color: var(--neog-text-link-hover);
-}
 
 .neog-card__align-right{
   margin-left: auto; 
@@ -148,17 +117,18 @@ a.neog-card__link-button:hover {
 .neog-card.variant2 .neog-card__hero-bg{
   width: 6rem;
   height: 6rem;  
+  background-color: var(--neog-pink);
 }
 
 .neog-card.variant2 .neog-card__hero-bg h1{
-  font-size: var(--neog-fontsize-normal);
+  font-size: var(--neog-fontsize-default);
 }
 
-.neog-card.variant2 .neog-card__hero-bg h3{
+.neog-card.variant2 .neog-card__hero-bg h5{
   display: none;
 }
 
 .neog-card.variant2 .neog-card__footer{
   padding: 1rem;
-  border-top: 1px solid var(--neog-gray1);
+  border-top: 1px solid var(--neog-lynx-grey);
 }
