Avatar component with badge has created

--- a/components/card.html
+++ b/components/card.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>NeoG component library - Card</title>
-    <link rel="stylesheet" href="css/neog-styles.css" />
+    <link rel="stylesheet" href="../css/neog-styles.css" />
 </head>
 
 <body class="neog-typography">
-    <h4><a href="index.html">Back to Home</a></h4>
+    <h4><a href="../index.html">Back to Home</a></h4>
     <h1 class="neog__demo-pagetitle">Card</h1>
     <div class="neog__demo-wrapper">
         <!-- Variant 1-->
@@ -29,9 +29,9 @@
             </div>
             <div class="neog-card__footer">
                 <p>Tags: </p>
-                <span class="neog-badge success">HTML</span>
-                <span class="neog-badge warning">CSS</span>
-                <span class="neog-badge primary">FLEX</span>
+                <span class="neog__badge success px-4">HTML</span>
+                <span class="neog__badge warning px-4">CSS</span>
+                <span class="neog__badge primary px-4">FLEX</span>
             </div>
         </div>
         <!-- Variant 2-->
@@ -56,9 +56,9 @@
             </div>
             <div class="neog-card__footer">
                 <p>Tags: </p>
-                <span class="neog-badge success">HTML</span>
-                <span class="neog-badge warning">CSS</span>
-                <span class="neog-badge primary">FLEX</span>
+                <span class="neog__badge success px-4">HTML</span>
+                <span class="neog__badge warning px-4">CSS</span>
+                <span class="neog__badge primary px-4">FLEX</span>
             </div>
         </div>
         <!-- Variant 3-->  
@@ -86,9 +86,9 @@
             </div>
             <div class="neog-card__footer">
                 <p>Tags: </p>
-                <span class="neog-badge success">HTML</span>
-                <span class="neog-badge warning">CSS</span>
-                <span class="neog-badge primary">FLEX</span>
+                <span class="neog__badge success px-4">HTML</span>
+                <span class="neog__badge warning px-4">CSS</span>
+                <span class="neog__badge primary px-4">FLEX</span>
             </div>
         </div>
     </div>
