--- a/components/buttons.html
+++ b/components/buttons.html
@@ -2,11 +2,11 @@
 
 <head>
     <title>NeoG component library - Buttons</title>
-    <link rel="stylesheet" href="css/neog-styles.css" />
+    <link rel="stylesheet" href="../css/neog-styles.css" />
 </head>
 
 <body class="neog-typography">
-    <h4><a href="index.html">Back to Home</a></h4>
+    <h4><a href="../index.html">Back to Home</a></h4>
     <h1 class="neog__demo-pagetitle my-2">Buttons</h1>
     <div>
         <h3 class="my-2">Solid Buttons</h3>
