--- a/css/variables.css
+++ b/css/variables.css
@@ -49,6 +49,7 @@
     /*typography - Font-weight*/
     --neog-text-semibold: 600;
     --neog-text-regular: 400;
+    --neog-text-muted: var(--neog-grey);
   
     /*typography - Text*/
     --neog-fontsize-default: 0.875rem;
@@ -60,4 +61,7 @@
     /*border-radius*/
     --neog-border-radius-small: 0.25rem;
     --neog-border-radius-full: 50%;
+
+    /*Forms*/
+    --neog-form-element-height: 2.5rem;
   }
