--- a/components/buttons.html
+++ b/components/buttons.html
@@ -1,141 +1,164 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>NeoG component library - Buttons</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeoG Component Library</title>
     <link rel="stylesheet" href="../css/neog-styles.css" />
 </head>
-
 <body class="neog-typography">
-    <h4><a href="../index.html">Back to Home</a></h4>
-    <h1 class="neog__demo-pagetitle my-2">Buttons</h1>
-    <div>
-        <h3 class="my-2">Solid Buttons</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary icon-left">Primary</button>
-            <button class="neog__button secondary">Secondary</button>
-            <button class="neog__button cta">Call to Action</button>
-            <button class="neog__button warning">Warning</button>
-            <button class="neog__button default">White</button>
-            <button class="neog__button grey">Grey</button>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Outline Buttons</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary outline">Primary</button>
-            <button class="neog__button secondary outline">Secondary</button>
-            <button class="neog__button grey outline">Grey</button>
-            <button class="neog__button cta outline">Call to Action</button>
-            <button class="neog__button warning outline">Warning</button>
+    <div class="wrapper d-flex">
+        <nav class="neog__navigation">
+            <div class="logo mb-4 text-align-center">
+                <h2>neoG</h2>
+                <h4>Components<br /> Library</h4>
+            </div>
+            <ul>
+                <li><a href="../documentation.html"><span>Home</span></a></li>
+                <li><a href="avatar.html"><span>Avatars</span>   </a></li>
+                <li><a href="alert.html"><span>Alerts</span></a></li>
+                <li><a href="badge.html"><span>Badges</span></a></li>
+                <li><a href="#" class="active"><span>Buttons</span></a></li>
+                <li><a href="card.html"><span>Cards</span></a></li>
+                <li><a href="image.html"><span>Images</span></a></li>
+                <li><a href="input.html"><span>Inputs</span></a></li>
+            </ul>
+        </nav>
+        <div class="page__wrapper">
+            <header class="page__header d-flex flex-column-center">
+                <h1>Buttons</h1>
+                <span>Buttons express what action will occur when the user clicks or touches it. Buttons are used to initialize an action.</span>
+            </header>
+            <article class="m-4">
+                <h4 class="page__subtitle">Solid Buttons</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary icon-left">Primary</button>
+                    <button class="neog__button secondary">Secondary</button>
+                    <button class="neog__button cta">Call to Action</button>
+                    <button class="neog__button warning">Warning</button>
+                    <button class="neog__button default">White</button>
+                    <button class="neog__button grey">Grey</button>
+                </div>        
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Outline Buttons</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary outline">Primary</button>
+                    <button class="neog__button secondary outline">Secondary</button>
+                    <button class="neog__button grey outline">Grey</button>
+                    <button class="neog__button cta outline">Call to Action</button>
+                    <button class="neog__button warning outline">Warning</button>                    
+                </div>          
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Hollow Buttons</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary hollow">Primary</button>
+                    <button class="neog__button secondary hollow">Secondary</button>
+                    <button class="neog__button cta hollow">Call to Action</button>
+                    <button class="neog__button warning hollow">Warning</button>
+                    <button class="neog__button grey hollow">Grey</button>
+                </div>            
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Link Buttons</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <a class="neog__button primary icon-left">Primary</a>
+                    <a class="neog__button secondary">Secondary</a>
+                    <a class="neog__button cta">Call to Action</a>
+                    <a class="neog__button warning">Warning</a>
+                    <a class="neog__button default">White</a>
+                    <a class="neog__button grey">Grey</a>
+                </div>           
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Button with icon aligned left</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary icon-left"><i class="fas fa-user"></i>Primary</button>
+                    <button class="neog__button secondary icon-left"><i class="fas fa-user"></i>Secondary</button>
+                    <button class="neog__button cta icon-left"><i class="fas fa-user"></i>Call to Action</button>
+                    <button class="neog__button warning icon-left"><i class="fas fa-user"></i>Warning</button>
+                    <button class="neog__button default icon-left"><i class="fas fa-user"></i>White</button>
+                    <button class="neog__button grey icon-left"><i class="fas fa-user"></i>Grey</button>
+                </div>         
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Button with icon aligned right</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary icon-right">Primary<i class="fas fa-gift"></i></button>
+                    <button class="neog__button secondary icon-right">Secondary<i class="fas fa-gift"></i></button>
+                    <button class="neog__button cta icon-right">Call to Action<i class="fas fa-gift"></i></button>
+                    <button class="neog__button warning icon-right">Warning<i class="fas fa-gift"></i></button>
+                    <button class="neog__button default icon-right">White<i class="fas fa-gift"></i></button>
+                    <button class="neog__button grey icon-right">Grey<i class="fas fa-gift"></i></button>
+                </div>           
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Icons only Buttons</h4>
+                <div class="neog__demo-wrapper-buttons my-2">
+                    <button class="neog__button primary"><i class="fas fa-user"></i></button>
+                    <button class="neog__button secondary"><i class="fas fa-users"></i></button>
+                    <button class="neog__button cta"><i class="fas fa-user"></i></button>
+                    <button class="neog__button warning"><i class="fas fa-users"></i></button>
+                    <button class="neog__button default"><i class="fas fa-user"></i></button>
+                    <button class="neog__button grey"><i class="fas fa-users"></i></button>
+                </div>    
+                <div class="neog__demo-wrapper-buttons my-2">
+                    <button class="neog__button primary outline"><i class="fas fa-cog"></i></button>
+                    <button class="neog__button secondary outline"><i class="fas fa-cog"></i></button>
+                    <button class="neog__button grey outline"><i class="fas fa-cog"></i></button>
+                    <button class="neog__button cta outline"><i class="fas fa-cog"></i></button>
+                    <button class="neog__button warning outline"><i class="fas fa-cog"></i></button>                    
+                </div>  
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary hollow"><i class="fas fa-camera"></i></button>
+                    <button class="neog__button secondary hollow"><i class="fas fa-camera"></i></button>
+                    <button class="neog__button cta hollow"><i class="fas fa-camera"></i></button>
+                    <button class="neog__button warning hollow"><i class="fas fa-camera"></i></button>
+                    <button class="neog__button grey hollow"><i class="fas fa-camera"></i></button>
+                </div>       
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Sizes</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary large">Large</button>
+                    <button class="neog__button primary">Default</button>
+                    <button class="neog__button primary small">Small</button>
+                 </div>   
+                 <div class="neog__demo-wrapper-buttons my-2">
+                    <button class="neog__button secondary large">Large</button>
+                    <button class="neog__button secondary">Default</button>
+                    <button class="neog__button secondary small">Small</button>
+                 </div>          
+            </article>
+            <article class="m-4">
+                <h4 class="page__subtitle">Disabled Butto</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary disabled">Disabled</button>
+                    <button class="neog__button secondary disabled">Disabled</button>
+                </div>           
+            </article>
+            <article class="m-4">
+                <h4  class="page__subtitle">Full width</h4>
+                <div class="neog__demo-wrapper-buttons">
+                    <button class="neog__button primary full-width">Full width</button>
+                 </div>   
+                 <div class="neog__demo-wrapper-buttons my-2">
+                    <button class="neog__button secondary full-width">Full width</button>
+                 </div>        
+            </article>
+            <article class="m-4">
+                <div>
+                    <h4 class="page__subtitle">Floating Action Button</h4>
+                    <div class="neog__demo-wrapper-buttons">
+                        <button class="neog__button primary float"><i class="fas fa-plus"></i></button>
+                    </div>        
+                </div>
+            </article>
             
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Hollow Buttons</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary hollow">Primary</button>
-            <button class="neog__button secondary hollow">Secondary</button>
-            <button class="neog__button cta hollow">Call to Action</button>
-            <button class="neog__button warning hollow">Warning</button>
-            <button class="neog__button grey hollow">Grey</button>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Link Buttons</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <a class="neog__button primary icon-left">Primary</a>
-            <a class="neog__button secondary">Secondary</a>
-            <a class="neog__button cta">Call to Action</a>
-            <a class="neog__button warning">Warning</a>
-            <a class="neog__button default">White</a>
-            <a class="neog__button grey">Grey</a>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Button with icon aligned left</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary icon-left"><i class="fas fa-user"></i>Primary</button>
-            <button class="neog__button secondary icon-left"><i class="fas fa-user"></i>Secondary</button>
-            <button class="neog__button cta icon-left"><i class="fas fa-user"></i>Call to Action</button>
-            <button class="neog__button warning icon-left"><i class="fas fa-user"></i>Warning</button>
-            <button class="neog__button default icon-left"><i class="fas fa-user"></i>White</button>
-            <button class="neog__button grey icon-left"><i class="fas fa-user"></i>Grey</button>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Button with icon aligned right</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary icon-right">Primary<i class="fas fa-gift"></i></button>
-            <button class="neog__button secondary icon-right">Secondary<i class="fas fa-gift"></i></button>
-            <button class="neog__button cta icon-right">Call to Action<i class="fas fa-gift"></i></button>
-            <button class="neog__button warning icon-right">Warning<i class="fas fa-gift"></i></button>
-            <button class="neog__button default icon-right">White<i class="fas fa-gift"></i></button>
-            <button class="neog__button grey icon-right">Grey<i class="fas fa-gift"></i></button>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Icons only Buttons</h3>
-        <div class="neog__demo-wrapper-buttons my-2">
-            <button class="neog__button primary"><i class="fas fa-user"></i></button>
-            <button class="neog__button secondary"><i class="fas fa-users"></i></button>
-            <button class="neog__button cta"><i class="fas fa-user"></i></button>
-            <button class="neog__button warning"><i class="fas fa-users"></i></button>
-            <button class="neog__button default"><i class="fas fa-user"></i></button>
-            <button class="neog__button grey"><i class="fas fa-users"></i></button>
         </div>
-        <div class="neog__demo-wrapper-buttons my-2">
-            <button class="neog__button primary outline"><i class="fas fa-cog"></i></button>
-            <button class="neog__button secondary outline"><i class="fas fa-cog"></i></button>
-            <button class="neog__button grey outline"><i class="fas fa-cog"></i></button>
-            <button class="neog__button cta outline"><i class="fas fa-cog"></i></button>
-            <button class="neog__button warning outline"><i class="fas fa-cog"></i></button>
-            
-        </div>  
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary hollow"><i class="fas fa-camera"></i></button>
-            <button class="neog__button secondary hollow"><i class="fas fa-camera"></i></button>
-            <button class="neog__button cta hollow"><i class="fas fa-camera"></i></button>
-            <button class="neog__button warning hollow"><i class="fas fa-camera"></i></button>
-            <button class="neog__button grey hollow"><i class="fas fa-camera"></i></button>
-        </div>        
     </div>
-    <div>
-        <h3 class="my-2">Sizes</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary large">Large</button>
-            <button class="neog__button primary">Default</button>
-            <button class="neog__button primary small">Small</button>
-         </div>   
-         <div class="neog__demo-wrapper-buttons my-2">
-            <button class="neog__button secondary large">Large</button>
-            <button class="neog__button secondary">Default</button>
-            <button class="neog__button secondary small">Small</button>
-         </div>   
-    </div>
-    <div>
-        <h3 class="my-2">Disabled Button</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary disabled">Disabled</button>
-            <button class="neog__button secondary disabled">Disabled</button>
-        </div>        
-    </div>
-    <div>
-        <h3 class="my-2">Full width</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary full-width">Full width</button>
-         </div>   
-         <div class="neog__demo-wrapper-buttons my-2">
-            <button class="neog__button secondary full-width">Full width</button>
-         </div>   
-    </div>
-
-    <div>
-        <h3 class="my-2">Floating Action Button</h3>
-        <div class="neog__demo-wrapper-buttons">
-            <button class="neog__button primary float"><i class="fas fa-plus"></i></button>
-        </div>        
-    </div>
-    
 </body>
-
 </html>
